Add powerpc-ibm-aix5.1.0.0 for 3.0.4.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -923,7 +923,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>powerpc-ibm-aix5.1.0.0</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01302.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01302.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-04/msg01330.html">3.0.4</a></td>
 </tr>
 
 <tr>
