--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -136,11 +136,32 @@ GNU/Linux) and cross targets and use an extensive
 <a href="benchmarks/">various benchmark suites
 and automated testers</a> to maintain and improve quality.</p>
 
-<p><a href="gcc-3.0/">GCC 3.0.4</a> is the current release, and we are
-working on the next major release, GCC 3.1
-(<a href="gcc-3.1/criteria.html">release criteria</a>,
-<a href="gcc-3.1/changes.html">changes</a>).
-</p>
+
+<dl>
+<dt><strong>Current release series:</strong>
+  <a href="gcc-3.0/">GCC 3.0</a>
+</dt>
+<dd>
+  Latest release: GCC 3.0.4
+  <br />
+  Open for all maintainers.
+</dd>
+<dt><strong>Active release branch:</strong>
+  GCC 3.1 (<a href="gcc-3.1/criteria.html">release criteria</a>,
+           <a href="gcc-3.1/changes.html">changes</a>)
+</dt>
+<dd>
+  No release yet.
+  <br />
+  Non-documentation commits require approval by release manager.
+</dd>
+<dt><strong>Active development (mainline):</strong>
+  will become GCC 3.2
+</dt>
+<dd>
+  Open for all maintainers.
+</dd>
+</dl>
 
 <hr />
 
