Fix markup. (Address PR web/6441.)

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -174,11 +174,17 @@ are being obsoleted.</p>
 
 <ul>
   <li>Alpha:
-      <ul><li>OSF/1, <code>alpha*-*-osf[123]*</code>.
+      <ul>
+        <li>OSF/1, <code>alpha*-*-osf[123]*</code>.
 	  (Digital Unix and Tru64 Unix, aka <code>alpha*-*-osf[45]</code>,
-	  are still supported.)</li></ul>
+	  are still supported.)</li>
+      </ul>
+  </li>
   <li>ARM:
-      <ul><li>RISCiX, <code>arm-*-riscix*</code>.</li></ul>
+      <ul>
+        <li>RISCiX, <code>arm-*-riscix*</code>.</li>
+      </ul>
+  </li>
   <li>i386:
       <ul>
 	<li>386BSD, <code>i?86-*-bsd*</code></li>
@@ -228,7 +234,9 @@ are being obsoleted.</p>
       </ul>
    </li>
    <li>SPARC:
-      <ul><li>RTEMS/a.out, <code>sparc-*-rtemsaout*</code>.</li></ul>
+      <ul>
+        <li>RTEMS/a.out, <code>sparc-*-rtemsaout*</code>.</li>
+      </ul>
    </li>
 </ul>
 
