--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -17,6 +17,9 @@
   <li>The <code>-traditional</code> C compiler option has been
   deprecated and will be removed in GCC 3.2.  (It remains possible to
   preprocess non-C code with the traditional preprocessor.)</li>
+
+  <li>The default debugging format for GNU/Linux platforms has changed
+  from stabs to DWARF2.  This requires GDB 5.1.1 or later.</li>
 </ul>
 
 
