Remove issues.html and do not reference it any longer. Also disable "Functionality" section. Add section on high-priority PRs.

--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -32,15 +32,27 @@ application program on a particular system, then that criterion may be
 abandoned.  However, that eventuality should be avoided if at all
 possible.</p>
 
+<!--
 <h2>Functionality</h2>
 
 <p>GCC 3.1 will contain considerable improvements in functionality
 relative to previous releases of GCC.  Each of these improvements must
 be completed before GCC 3.1 is released:</p>
 <ul>
-<li><p><a href="issues.html">Open Bugs</a></p>
-</li>
+<li>...</li>
 </ul>
+-->
+
+
+<h2>Bug Fixes</h2>
+
+<p>We strive to fix all open problem reports (PRs) in our bug tracking
+system that indicate a regression with respect to previous releases.</p>
+
+<p>Such PRs are marked as high-priority items, and every GCC maintainer
+with CVS and GNATS write access may set PRs indicating a regression to
+high-priority.</p>
+
 
 <h2>Platform Support</h2>
 
