--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -18,7 +18,8 @@
   deprecated and will be removed in GCC 3.2.  (It remains possible to
   preprocess non-C code with the traditional preprocessor.)</li>
 
-  <li>The default debugging format for GNU/Linux platforms has changed
+  <li>The default debugging format for most ELF platforms (including
+  GNU/Linux and FreeBSD; notable exception is Solaris) has changed
   from stabs to DWARF2.  This requires GDB 5.1.1 or later.</li>
 </ul>
 
