--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -52,7 +52,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00421.html">3.0</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01705.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01705.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-04/msg01540.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -652,6 +653,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 6.2, glibc 2.2.5, kernel 2.2.14</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-04/msg01465.html">3.0.4</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.1</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a></td>
@@ -716,6 +724,13 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00310.html">3.0.4</a>;
 <br />Successful (C, C++, ObjC):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01140.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-04/msg01498.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -816,7 +831,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>SuSE 7.2, glibc 2.2.2, kernel 2.4.4</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01278.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01278.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-04/msg01497.html">3.0.4</a></td>
 </tr>
 
 <tr>
