Add pch-branch; add italics to indicate metacharacters in branch names.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -118,7 +118,7 @@ you may want to check out include:</p>
 
 <ul>
   <li>gcc_latest_snapshot</li>
-  <li>gcc_ss_yyyymmdd</li>
+  <li>gcc_ss_<i>yyyymmdd</i></li>
   <li>gcc-3_1-branch</li>
   <li>gcc_3_0_4_release</li>
   <li>gcc_3_0_3_release</li>
@@ -139,7 +139,7 @@ you may want to check out include:</p>
   <li>egcs_1_0_2_release</li>
   <li>egcs_1_0_1_release</li>
   <li>egcs_1_0_release</li>
-  <li>egcs_ss_yyyymmdd	For snapshots prior to 19990913</li>
+  <li>egcs_ss_<i>yyyymmdd</i>	For snapshots prior to 19990913</li>
   <li>gnu-win32-b20-branch</li>
   <li>dfa-branch.  This branch contains the insn scheduler with an automaton
       based pipeline hazard recognizer.  </li>
@@ -149,6 +149,9 @@ you may want to check out include:</p>
   version for x86-64 development and is maintained by Jan Hubicka
   &lt;<a href="mailto:jh@suse.cz">jh@suse.cz</a>&gt; and Andreas
   Jaeger &lt;<a href="mailto:aj@suse.de">aj@suse.de</a>&gt;.</li>
+  <li>pch-branch.  This branch contains work-in-progress towards a
+  precompiled header implementation, including lots of garbage
+  collector changes.</li>
 </ul>
 
 
