--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -232,6 +232,11 @@ and code.  The following table lists some simple cases:</p>
     <td></td>
   </tr>
   <tr>
+    <td>"MIPS"</td>
+    <td>"Mips" or "mips"</td>
+    <td></td>
+  </tr>
+  <tr>
     <td>"nonzero"</td>
     <td>"non-zero" or "non zero"</td>
     <td></td>
