Rephrase sentence on collaboration with developers. Mention CVS before mentioning snapshots.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -122,11 +122,10 @@ Fortran, and <a href="java/">Java</a> as well as libraries for these
 languages (<a href="libstdc++/">libstdc++</a>, libgcj,...); GCC 3.1
 will also include an Ada front end.</p>
 
-<p>We want to work closely with developers to help and encourage them
-to <a href="contribute.html">contribute changes</a> for inclusion in
-GCC.  We thus provide access to our development sources with <a
-href="snapshots.html">weekly snapshots</a> and <a
-href="cvs.html">anonymous CVS</a>.</p>
+<p>We encourage everyone to <a href="contribute.html">contribute changes</a>
+and help testing GCC, and we provide access to our development sources with
+<a href="cvs.html">anonymous CVS</a> and <a href="snapshots.html">weekly
+snapshots</a>.</p>
 
 <p>We will provide regular, high quality
 <a href="releases.html">releases</a>.
