Sync structure with gcc-3.1/changes.html.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -24,13 +24,20 @@
     <li>...</li>
   </ul>
 
+
   
 <h2>New Languages and Language specific improvements</h2>
+
+<h3>C++</h3>
 
   <ul>
     <li>Type based alias analysis has been implemented for C++
     aggregate types. </li>
   </ul>
+
+<h3>Java</h3>
+
+<h3>Fortran</h3>
 
 
 <h2>New Targets and Target Specific Improvements</h2>
@@ -38,6 +45,9 @@
   <ul>
     <li>...</li>
   </ul>
+
+
+<h2>Obsolete Targets</h2>
 
 
 <h2>Documentation improvements</h2>
