--- a/htdocs/gcc-3.1/testing-pooma.html
+++ b/htdocs/gcc-3.1/testing-pooma.html
@@ -56,7 +56,7 @@ programs, and run the examples, use:</p>
     </li>
     <li>Create a suitable file 
       <code>config/arch/<em>ARCH</em>gcc-template.conf</code>.  
-      All that was required for cygwin was<br>
+      All that was required for cygwin was<br />
       <code>cp config/arch/LINUXgcc-template.conf  
         config/arch/CYGWINgcc-template.conf</code>
     </li>
