--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -43,7 +43,11 @@
 <h2>New Targets and Target Specific Improvements</h2>
 
   <ul>
-    <li>...</li>
+    <li>The HP-PA port now defaults to scheduling for the PA8000 series
+        of processors.  Scheduling support for the PA7300 processor has
+	been added.</li>
+    <li>The Sparc, HP-PA and SH5 ports have been converted to use the DFA
+        processor pipeline description.</li>
   </ul>
 
 
@@ -54,6 +58,9 @@
 
 
 <h2>Other significant improvements</h2>
+  <ul>
+    <li>A new scheme for accurately describing processor pipelines has been
+        added for GCC 3.2 (aka the DFA scheduler).</li>
 
 </body>
 </html>
