--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -1,4 +1,4 @@
-<html>
+1<html>
 
 <head>
 <title>GCC Bugs</title>
@@ -215,17 +215,17 @@ instructions for GCC language implementations other than Ada.</p>
 order to be useful:</p>
 
 <ul>
-<li>the exact version of GCC, as shown by "<code>gcc -v</code>";
-<li>the system type;
-<li>the options when GCC was configured/built;
+<li>the exact version of GCC, as shown by "<code>gcc -v</code>";</li>
+<li>the system type;</li>
+<li>the options when GCC was configured/built;</li>
 <li>the exact command line passed to the <code>gcc</code> program
 triggering the bug
 (not just the flags passed to <code>gnatmake</code>, but
-<code>gnatmake</code> prints the parameters it passed to <code>gcc</code>)
-<li>a collection of source files for reproducing the bug,
-preferably a minimal set (see below);
-<li>a description of the expected behavior;
-<li>a description of actual behavior.
+<code>gnatmake</code> prints the parameters it passed to <code>gcc</code>)</li>
+<li>a collection of source files for reproducing the bug,</li>
+preferably a minimal set (see below);</li>
+<li>a description of the expected behavior;</li>
+<li>a description of actual behavior.</li>
 </ul>
 
 <p>If your code depends on additional source files (usually package
