--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -222,7 +222,7 @@ order to be useful:</p>
 triggering the bug
 (not just the flags passed to <code>gnatmake</code>, but
 <code>gnatmake</code> prints the parameters it passed to <code>gcc</code>)</li>
-<li>a collection of source files for reproducing the bug,</li>
+<li>a collection of source files for reproducing the bug,
 preferably a minimal set (see below);</li>
 <li>a description of the expected behavior;</li>
 <li>a description of actual behavior.</li>
