2002-05-01  Phil Edwards  <pme@gcc.gnu.org>
	* index.html:  Add comment for 3.1
	* thanks.html:  Tweaks to HTML, more people.

--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -39,6 +39,10 @@
 <h3>News</h3>
 
 <dl>
+<!--
+ <dt>2002-05-??</dt>
+ <dd> <a href="http://gcc.gnu.org/gcc-3.1/">GCC 3.1</a> released.</dd>
+-->
  <dt>2002-03-05</dt>
  <dd> Fourteenth snapshot release,
    <a href="download.html">libstdc++-v3.0.97</a>.</dd>
