--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -21,6 +21,32 @@ Work has already begun to merge the Classpath and libgcj AWT
 implementations.
 </dd>
 
+<dt><b>October 2, 2001</b></dt>
+<dd>
+<a href="http://www.gnat.com/">Ada Core Technologies, Inc</a>, has contributed 
+its GNAT Ada 95 front end and associated tools. The GNAT compiler fully 
+implements the Ada language as defined by the ISO/IEC 8652 standard. 
+</dd>
+
+<dt><b>September 11, 2001</b></dt>
+<dd>
+Roman Lechtchinsky, Technische Universit&auml;t Berlin, has donated support
+for the Cray T3E platform.
+</dd>
+
+<dt><b>August 29, 2001</b></dt>
+<dd>
+Jan Hubicka, SuSE Labs, together with Richard Henderson, Red Hat, and
+Andreas Jaeger, SuSE Labs, has contributed <a
+href="news/profiledriven.html">infrastructure for profile driven optimizations</a>.
+</dd>
+
+<dt><b>August 25, 2001</b></dt>
+<dd>
+Geoffrey Keating of Red Hat has donated support for Sanyo's Stormy16
+CPU core.
+</dd>
+
 <dt><b>August 20, 2001</b></dt>
 <dd>
 GCC 3.0.1 has been released.
