Adjust deprecation lists to match yesterday's change to the source code

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -201,6 +201,7 @@ been declared obsolete:</p>
 
 <ul>
    <li>MIL-STD-1750A, <code>1750a-*-*</code></li>
+   <li>AMD A29k, <code>a29k-*-*</code></li>
    <li>Convex, <code>c*-convex-*</code></li>
    <li>Clipper, <code>clipper-*-*</code></li>
    <li>Elxsi, <code>elxsi-*-*</code></li>
@@ -216,10 +217,6 @@ will survive much longer unless we see definite signs of port
 activity.</p>
 
 <ul>
-  <li>AMD A29k except
-      <ul><li>Generic COFF, <code>a29k-*-udi</code>
-                        and <code>a29k-*-coff</code>.</li></ul>
-  </li>
   <li>Motorola 88000 except
       <ul>
         <li>Generic a.out, <code>m88k-*-aout*</code></li>
