The AWT license announcement should have gone to index.html instead of news.html back then.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -219,6 +219,15 @@ a port to the configurable and extensible
 architecture</a>.
 </dd>
 
+<dt><b>January 14, 2002</b></dt>
+<dd>
+Richard Stallman has changed the licensing of the Classpath AWT
+implementation to match the licensing of the rest of Classpath.  This
+means that the only remaining barrier to AWT for libgcj is manpower.
+Work has already begun to merge the Classpath and libgcj AWT
+implementations.
+</dd>
+
 <dt><b>January 8, 2002</b></dt>
 <dd>
  <a href="http://www.suse.com">SuSE Labs</a> developers Jan Hubicka, Bo
