--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -12,14 +12,7 @@ home page</a>.</p>
 
 <dl>
 
-<dt><b>January 14, 2002</b></dt>
-<dd>
-Richard Stallman has changed the licensing of the Classpath AWT
-implementation to match the licensing of the rest of Classpath.  This
-means that the only remaining barrier to AWT for libgcj is manpower.
-Work has already begun to merge the Classpath and libgcj AWT
-implementations.
-</dd>
+<!-- ATTENTION: This page is for *OLD* news! -->
 
 <dt><b>October 2, 2001</b></dt>
 <dd>
