Add information and profile based optimizations.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -27,7 +27,16 @@
 <h2>General Optimizer Improvements</h2>
 
 <ul>
-  <li>dummy</li>
+<li><p>Jan Hubicka, SuSE Labs, together with Richard Henderson, Red Hat, and
+      Andreas Jaeger, SuSE Labs, has contributed <a
+      href="news/profiledriven.html">infrastructure for profile driven
+      optimizations</a>.</p>
+
+      <p>Options <code>-fprofile-arcs</code> and
+      <code>-fbranch-probabilities</code> can now be used to improve speed of
+      the generated code by profiling the actual program behaviour on typical
+      runs.  In the absence of profile info the compiler attempts to guess the
+      profile statically.</p>
 </ul>
 
   
