--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -193,7 +193,11 @@ documentation</a>.</p>
       <li>Prefetch support has been added to the Pentium III, Pentium 4, and
       Athlon series.</li>
    </ul></li>
-     
+
+<li>The PowerPC back-end has added 64-bit PowerPC GNU/Linux support.</li>
+
+<li>C++ support for AIX has been improved.</li>
+
 <li>Altivec support has been added for the PowerPC variants that
     support it.  See <code>-maltivec</code>.</li>
 </ul>
