Fix "infrastructure for profile driven optimization".

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -29,7 +29,7 @@
 <ul>
 <li><p>Jan Hubicka, SuSE Labs, together with Richard Henderson, Red Hat, and
       Andreas Jaeger, SuSE Labs, has contributed <a
-      href="news/profiledriven.html">infrastructure for profile driven
+      href="../news/profiledriven.html">infrastructure for profile driven
       optimizations</a>.</p>
 
       <p>Options <code>-fprofile-arcs</code> and
