Rotate news. Use uniform spelling "front end" troughout.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -14,6 +14,40 @@ home page</a>.</p>
 
 <!-- ATTENTION: This page is for *OLD* news! -->
 
+<dt><b>December 20, 2001</b></dt>
+<dd>
+GCC 3.0.3 has been released.
+</dd>
+
+<dt><b>November 3, 2001</b></dt>
+<dd>
+Hans-Peter Nilsson has contributed a port to <a
+href="http://www-cs-faculty.stanford.edu/~knuth/mmix.html">MMIX</a>, the
+CPU architecture used in new editions of Donald E. Knuth's The Art of
+Computer Programming.
+</dd>
+
+<dt><b>October 25, 2001</b></dt>
+<dd>
+GCC 3.0.2 has been released.
+</dd>
+
+<dt><b>October 11, 2001</b></dt>
+<dd>
+<a href="http://www.axis.com/">Axis Communications</a> has contributed 
+its port to the CRIS CPU architecture, used in the ETRAX
+system-on-a-chip series.  See
+<a href="http://developer.axis.com/">developer.axis.com</a> for technical
+information.
+</dd>
+
+<dt><b>October 5, 2001</b></dt>
+<dd>
+Alexandre Oliva of Red Hat has generalized the tree inlining
+infrastructure, formerly in the C++ front end, so that it is now used
+in the C front end too.
+</dd>
+
 <dt><b>October 2, 2001</b></dt>
 <dd>
 <a href="http://www.gnat.com/">Ada Core Technologies, Inc</a>, has contributed 
@@ -115,7 +149,7 @@ stabilization for branching for GCC 3.0.
 <dt><b>December 19, 2000</b></dt>
 <dd>
 The runtime library for the <a href="java/">
-Java front-end</a>, <code>libgcj</code>, has been moved into the GCC 
+Java front end</a>, <code>libgcj</code>, has been moved into the GCC 
 tree. This means that a separate download will no longer be required for 
 Java support.
 </dd>
@@ -164,7 +198,7 @@ dramatically decreased.
 
 <dt><b>November 13, 2000</b></dt>
 <dd>
-We have now switched the C++ frontend to use
+We have now switched the C++ front end to use
 <a href="libstdc++/">libstdc++-v3</a>, a new implementation of the ISO
 Standard C++ Library which brings significant changes and improvements
 over our ``old'' library. There still be may some rough edges, but we
@@ -187,7 +221,7 @@ version.)</li>
 
 <dt><b>November 2, 2000</b></dt>
 <dd>
-The C, C++ and Objective C front-ends to GCC now use an integrated
+The C, C++ and Objective C front ends to GCC now use an integrated
 preprocessor by default.  If all goes well, this will also be the
 default mode for GCC 3.0.
 </dd>
@@ -288,7 +322,7 @@ GCC 2.95.x series of releases.  He has done an outstanding job.</p>
 <dt><b>March 18, 2000</b></dt>
 <dd>
 Andy Vaught has started work on GNU Fortran 95, the Fortran
-Frontend destined to implement the latest standard.  See
+front end destined to implement the latest standard.  See
 <a href="http://g95.sourceforge.net/">this page</a> for its current
 status (previously over <a href="http://xena.eas.asu.edu/~andy/">here</a>).
 </dd>
