2002-05-03  Phil Edwards  <pme@gcc.gnu.org>
	* changes.html:  Add note for libstdc++.  Book titles are <em>'d.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -130,6 +130,10 @@
     return becomes a no-op.  For this to work, all return statements in the
     function must return the same variable.</p>
     </li>
+<li><p>Improvements to the C++ library are listed in
+    <a href="http://gcc.gnu.org/onlinedocs/libstdc++/faq/index.html#4_1">the
+    libstdc++-v3 FAQ</a>.</p>
+    </li>
 </ul>
 
 <h3>Java</h3>
@@ -168,8 +172,8 @@ documentation</a>.</p>
 <ul>
 <li>Hans-Peter Nilsson has contributed a port to <a
     href="http://www-cs-faculty.stanford.edu/~knuth/mmix.html">MMIX</a>,
-    the CPU architecture used in new editions of Donald E. Knuth's The Art
-    of Computer Programming.</li>
+    the CPU architecture used in new editions of Donald E. Knuth's <em>The Art
+    of Computer Programming</em>.</li>
     
 <li><a href="http://www.axis.com/">Axis Communications</a> has
     contributed its port to the CRIS CPU architecture, used in the ETRAX
