--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -174,6 +174,16 @@
 <a href="http://gcc.gnu.org/onlinedocs/g77_news.html">the Fortran
 documentation</a>.</p>
 
+<h3>Ada</h3>
+<p>
+<a href="http://www.gnat.com/">Ada Core Technologies, Inc</a>, has contributed 
+its GNAT Ada 95 front end and associated tools. The GNAT compiler fully 
+implements the Ada language as defined by the ISO/IEC 8652 standard.
+</p>
+<p>
+Please note that the integration of the Ada front end is still work in
+progress.
+</p>
 
 <h2>New Targets and Target Specific Improvements</h2>
 
