--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -175,6 +175,13 @@ and automated testers</a> to maintain and improve quality.</p>
 
 <dl>
 
+<dt><b>May 2, 2002</b></dt>
+<dd>
+<a href="http://www.hp.com/">HP</a> and <a
+href="http://www.codesourcery.com/">CodeSourcery</a> announced that HP
+will sponsor Mark Mitchell's work as GCC Release Manager through April 2003.
+</dd>
+
 <dt><b>April 30, 2002</b></dt>
 <dd>
 Vladimir Makarov, of <a href="http://www.redhat.com/">Red Hat</a>, has
