K6-2/K6-3 has prefetch too.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -234,7 +234,7 @@ progress.
       code &mdash; especially on the Pentium 4. Note that only scalar floating
       point instructions are used and GCC does not exploit SIMD features yet.</li>
 
-      <li>Prefetch support has been added to the Pentium III, Pentium 4, and
+      <li>Prefetch support has been added to the Pentium III, Pentium 4, K6-2, K6-3, and
       Athlon series.</li>
 
       <li>Code generated for floating point to integer converisons has been
