- Fix spelling of back end.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -241,7 +241,7 @@ progress.
       improved leading to better performance of many 3D applications.</li>
    </ul></li>
 
-<li>The PowerPC back-end has added 64-bit PowerPC GNU/Linux support.</li>
+<li>The PowerPC back end has added 64-bit PowerPC GNU/Linux support.</li>
 
 <li>C++ support for AIX has been improved.</li>
 
