Mention tree inlining in C and SH5 port.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -38,6 +38,7 @@
       runs.  In the absence of profile info the compiler attempts to guess the
       profile statically.</p>
 </li>
+
 <li><p><a href="http://www.suse.de/~aj/SPEC/">SPEC2000</a> and <a
       href="http://people.redhat.com/dnovillo/SPEC/">SPEC95</a> benchmark suites
       are now used daily to monitor performance of the generated code.</p>
@@ -49,12 +50,20 @@
       <code>-O2 -march=athlon</code> command-line options.</p>
 </li>
 
+<li>Alexandre Oliva, of <a href="http://www.redhat.com/">Red
+      Hat</a>, has generalized the tree inlining infrastructure
+      developed by <a
+      href="http://www.codesourcery.com/">CodeSourcery, LLC</a> for
+      the C++ front end, so that it is now used in the C front end
+      too.  Inlining functions as trees exposes them earlier to the
+      compiler, giving it more opportunities for optimization.
+</li>
+
 <li>Support for data prefetching instructions has been added to the GCC
       back end and several targets.  A new <code>__builtin_prefetch</code>
       instrics is available to explicitly insert prefetch instructions and
       experimental support for loop array prefetching has been added (see
       <code>-fprefetch-loop-array</code> documentation).
-
 </li>
 </ul>
 
@@ -206,6 +215,11 @@ progress.
     system-on-a-chip series.  See <a
     href="http://developer.axis.com/">Axis' developer site</a> for
     technical information.</li>
+
+<li>Alexandre Oliva, of <a href="http://www.redhat.com/">Red Hat</a>,
+    has contributed a port to the <a
+    href="http://www.superh.com/">SuperH</a> SH5 64-bit RISC
+    microprocessor architecture, extending the existing SH port.</li>
     
 <li>UltraSPARC is fully supported in 64-bit mode.  The option 
     <code>-m64</code> enables it.</li>
