Fix misnamed link to develop.html.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -196,7 +196,7 @@ from the GCC source tree.
 We have branched for GCC 3.1 (<a href="gcc-3.1/criteria.html">release
 criteria</a>, <a href="gcc-3.1/changes.html">changes</a>) and are
 concentrating on bugfixes.  The 3.1 release is
-<a href="develop.html#calendar">planned for late April</a>.
+<a href="develop.html#future">planned for late April</a>.
 </dd>
 
 <dt><b>February 21, 2002</b></dt>
