Add 3.0.4 entry for i686-pc-linux-gnu (SuSE 7.3, glibc 2.2.4).

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -839,7 +839,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>SuSE 7.3, glibc 2.2.4, kernel 2.4.10</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00324.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00324.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg00425.html">3.0.4</a></td>
 </tr>
 
 <tr>
