Add Gary Hade's info about kernel benchmarks.

--- a/htdocs/projects/ia64.html
+++ b/htdocs/projects/ia64.html
@@ -413,6 +413,46 @@ optimizations to determine which ones should be included with gcc -O2.</p>
 <li>Profile the Linux kernel
 <p>Profile the kernel and look for hot spots where better code generation
 or optimization would make a significant difference.</p>
+
+<p>Gary Hade at IBM has been collecting profile and coverage data for
+2.4.18 IA-64 Linux kernels built with prerelease versions of GCC 3.1.
+Profile data collection utilizes the SGI-donated Kernprof facility.
+Coverage data collection utilizes the IBM-donated GCOV kernel facility.
+The data is being generated under various system loads including
+parallel Linux kernel builds, AIM Suite VII Benchmark, and the
+SPEC SDET Benchmark.  Much of the data has already been collected but
+it still needs to be analyzed.</p>
+
+<p>Information and code for the data collection facilities and workloads
+mentioned above is available from these sources:
+<ul>
+<li>Kernprof:
+    <a href="http://oss.sgi.com/projects/kernprof/">
+    description at SGI web site</a>;
+    <a href="ftp://oss.sgi.com/www/projects/kernprof/download/">download</a>
+</li>
+
+<li>Support for Linux kernel 2.4.18 to generate GCOV data:
+    <a href="ftp://ftp.sourceforge.net/pub/sourceforge/lse/gcov-2.4.17.tar.bz2">
+    kernel module</a>;
+    <a href="ftp://ftp.sourceforge.net/pub/sourceforge/lse/2.4.18-gcov.patch">
+    kernel patch</a>
+</li>
+
+<li>AIM Suite VII:
+    <a href="http://www.caldera.com/developers/community/contrib/aim.html">
+    description at Caldera web site</a>;
+    <a href="ftp://ftp.caldera.com/pub/opensource/aim-suite7">download</a>
+</li>
+
+<li>SPEC SDET (proprietary benchmark):
+    <a href="http://www.specbench.org/osg/sdm91/#sdet">
+    description at specbench web site</a>;
+    <a href="http://www.citi.umich.edu/projects/linux-scalability/reports/spec.html">
+    description at citi web site</a>
+</li>
+</ul>
+</p>
 </li>
 
 <li>Dispersal analysis
