--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -728,6 +728,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.18</td>
+<td>Successful (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg00569.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.2, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-04/msg01498.html">3.0.4</a></td>
