--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -422,6 +422,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i586-pc-linux-gnu</td>
+<td>Mandrake 7.0, glibc 2.1.2, kernel 2.2.14</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg00601.html">3.0.4</a></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
 <td>Red Hat 7.0, glibc 2.1.92, kernel 2.2.16</td>
 <td>Successful (C, C++, ObjC, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01405.html">3.0.3</a></td>
