Updates from Steve Christiansen and formatting fixes.

--- a/htdocs/projects/ia64.html
+++ b/htdocs/projects/ia64.html
@@ -199,8 +199,7 @@ call.</p>
 
 <li>Control speculation for loads
 <p>This doesn't require recovery code and is quite simple,
-with <code>chk.s</code>.  Steve Christiansen plans to see if this idea is
-viable.</p>
+with <code>chk.s</code>.</p>
 </li>
 
 <li>Straight-line post-increment
@@ -221,6 +220,11 @@ size.</p>
 
 <li>Align procedures
 <p>This isn't turned on for IA-64; again, measure the trade-offs.</p>
+</li>
+
+<li>Tuning for Itanium 2
+<p>Tuning for Itanium 2, controlled by <code>-mtune</code>, should be added.
+Steve Christiansen has started working on this.</p>
 </li>
 
 </ul>
@@ -424,7 +428,7 @@ SPEC SDET Benchmark.  Much of the data has already been collected but
 it still needs to be analyzed.</p>
 
 <p>Information and code for the data collection facilities and workloads
-mentioned above is available from these sources:
+mentioned above is available from these sources:</p>
 <ul>
 <li>Kernprof:
     <a href="http://oss.sgi.com/projects/kernprof/">
@@ -452,7 +456,6 @@ mentioned above is available from these sources:
     description at citi web site</a>
 </li>
 </ul>
-</p>
 </li>
 
 <li>Dispersal analysis
