--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -355,6 +355,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-unknown-openbsd3.0 (Athlon)</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01044.html">3.0.4</a></td>
+</tr>
+
+<tr>
 <td>i486-pc-linux-gnu</td>
 <td>CAEN Linux 6.1, glibc 2.1.3, kernel 2.2.19</td>
 <td>Successful:
@@ -984,6 +991,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>SuSE 7.3, glibc 2.2.4, kernel 2.4.12</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01472.html">3.0.4</a></td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>Vine Linux 2.5CR, glibc 2.2.4, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg00731.html">3.0.4</a></td>
 </tr>
 
 <tr>
