--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -66,6 +66,10 @@
     experimental support for loop array prefetching has been added (see
     <code>-fprefetch-loop-array</code> documentation).
 </li>
+
+<li>Support for emitting debugging information for macros has been
+    added for DWARF2. It is activated using <code>-g3</code>. 
+</li>
 </ul>
 
   
@@ -224,6 +228,9 @@ progress.
     
 <li>UltraSPARC is fully supported in 64-bit mode.  The option 
     <code>-m64</code> enables it.</li>
+
+<li>For compatibility with the Sun compiler <code>#pragma
+    redefine_extname</code> has been implemented on Solaris.</li> 
     
 <li>The x86 back end has had some noticeable work done to it.
     <ul>
