Add mirrors.rcn.net in the US. By Kelley Cook <kelley.r.cook@gm.com>.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -57,7 +57,9 @@ sites</a>.</p>
 <li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a></li>
 <li>UK: <a href="ftp://ftp.mirror.ac.uk/sites/sources.redhat.com/pub/gcc/">ftp.mirror.ac.uk</a>, thanks to <a href="mailto:mirror@mirror.ac.uk">mirror@mirror.ac.uk</a></li>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/sourceware.cygnus.com/pub/gcc/">sunsite.doc.ic.ac.uk</a></li>
+<li>US (Virginia): <a href="ftp://mirrors.rcn.net/pub/sourceware/gcc/">mirrors.rcn.net</a> (also available via <a href="http://mirrors.rcn.net/pub/sourceware/gcc/">http</a>)</li>
 <li>US (St. Louis, releases only): <a href="ftp://mirrors.laffeycomputer.com/pub/sourceware.cygnus.com/pub/gcc/releases/">mirrors.laffeycomputer.com</a></li>
+
 </ul>
 
 <p>If you wish to host a new mirror site, please contact
