--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -144,7 +144,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>alphaev67-dec-osf4.0f</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01250.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01250.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01084.html">3.0.4</a></td>
 </tr>
 
 <tr>
