Add the Ksi front end. Originally by Michal Moskal <malekith@pld-linux.org>.

--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -57,6 +57,11 @@ the back end, nor the front end proper, is likely to be integrated in
 GCC, nor is the front-end likely to change to a more normal interface
 of linking directly to the back end.</li>
 
+<li>The <a href="ftp://ftp.pld-linux.org/people/malekith/ksi/">Ksi 
+language</a> provides a thin interface to GCC trees with lispy syntax.
+It is meant as an intermediate language, used for example by the
+<a href="http://gont.pld.org.pl/">Gont</a> compiler.</li>
+
 </ul>
 
 </body>
