Update description of timetable, noting the future as tentative, as well as the GCC 3.1 release date.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -216,8 +216,9 @@ spending undue amounts of time on release testing and packaging.</p>
 
 <h3><a name="future">Calendar</a></h3>
 
-<p>Here is a timeline of recent and upcoming branchpoints (for releases,
-stages of development, bugfixes, etc), resulting from the development plan:</p>
+<p>Here is a history of recent and a <em>tentative</em> timeline of upcoming
+stages of development, branch points, and releases:</p>
+
 <pre>
 
   ... former releases ...
@@ -243,7 +244,7 @@ stages of development, bugfixes, etc), resulting from the development plan:</p>
        +-- GCC 3.1 branch created -------------+
        |                                        \
        v                                         v
-  GCC 3.2 Stage 1 (ends Apr 15 2002)          GCC 3.1 release (Apr 15 2002)
+  GCC 3.2 Stage 1 (ends Apr 15 2002)          GCC 3.1 release (May 15 2002)
        |                                           \
        v                                            v
   GCC 3.2 Stage 2 (ends Jun 15 2002)          GCC 3.1.1 release (Jun 15 2002)
