--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -119,6 +119,7 @@ you may want to check out include:</p>
 <ul>
   <li>gcc_latest_snapshot</li>
   <li>gcc_ss_<i>yyyymmdd</i></li>
+  <li>gcc_3_1_release</li>
   <li>gcc-3_1-branch</li>
   <li>gcc_3_0_4_release</li>
   <li>gcc_3_0_3_release</li>
