Added some more Java changes.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -168,9 +168,15 @@
     feature.</li>
 <li>libgcj has been ported to more platforms.  In particular there
     is now a mostly-functional mingw32 target port.</li>
+<li>JNI and CNI invocation interfaces were implemented, so gcj-compiled
+    Java code can now be called from a C/C++ application.</li>
 <li>gcj can now use builtin functions for certain known methods,
-    for instance <code>Math.cos</code>.  gcj also has a new
-    <code>--no-store-checks</code> optimization option.</li>
+    for instance <code>Math.cos</code>.</li>
+<li>gcj can now automatically remove redundant array-store checks in some 
+    common cases.</li>
+<li>The <code>--no-store-checks</code> optimization option was added.
+    This can be used to omit runtime store checks for code which is known
+    not to throw <code>ArrayStoreException</code></li>
 <li>The following third party interface standards were added to
     libgcj: <code>org.w3c.dom</code> and <code>org.xml.sax</code>.</li>
 <li><code>java.security</code> has been merged with GNU
@@ -180,6 +186,9 @@
 <li><code>java.lang.Character</code> was rewritten to comply with
     the Unicode 3.0 standard.</li>
 <li>Partial support for many more locales was added to libgcj.</li>
+<li>Socket timeouts have been implemented.</li>
+<li>libgcj has been merged into a single shared library. There are no longer
+    separate shared libraries for the garbage collector and zlib.</li>
 <li>Several performance improvements were made to gcj and libgcj:
   <ul>
     <li>Hash synchronization (thin locks)</li>
