--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -138,7 +138,7 @@ and automated testers</a> to maintain and improve quality.</p>
 
 <dl>
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.0/">GCC 3.0.4</a>
+  <a href="gcc-3.1/">GCC 3.1</a>
 </dt><dd>
   Open for all maintainers.
 </dd>
@@ -167,6 +167,11 @@ and automated testers</a> to maintain and improve quality.</p>
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>May 15, 2002</b></dt>
+<dd>
+GCC 3.1 has been released.
+</dd>
 
 <dt><b>May 5, 2002</b></dt>
 <dd>
