Update Java changes.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -167,7 +167,7 @@
     executables which use libgcj using the new <code>gcj --resource</code>
     feature.</li>
 <li>libgcj has been ported to more platforms.  In particular there
-    is now a mostly-functional mingw32 target port.</li>
+    is now a mostly-functional mingw32 (Windows) target port.</li>
 <li>JNI and CNI invocation interfaces were implemented, so gcj-compiled
     Java code can now be called from a C/C++ application.</li>
 <li>gcj can now use builtin functions for certain known methods,
@@ -184,7 +184,7 @@
     more complete.</li>
 <li>A bytecode verifier was added to the libgcj interpreter.</li>
 <li><code>java.lang.Character</code> was rewritten to comply with
-    the Unicode 3.0 standard.</li>
+    the Unicode 3.0 standard, and improve performance.</li>
 <li>Partial support for many more locales was added to libgcj.</li>
 <li>Socket timeouts have been implemented.</li>
 <li>libgcj has been merged into a single shared library. There are no longer
