--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -16,6 +16,25 @@
      versions.  -->
 
 <ul>
+  <li>GCC 3.1 manuals:
+  <ul>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1/gcc/">GCC
+         3.1 Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.1/gcc.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1/g77/">G77
+         0.5.26 (GCC 3.1) Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.1/g77.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1/gcj/">GCC
+         3.1 GCJ Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.1/gcj.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1/cpp/">GCC 
+         3.1 CPP Manual (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.1/cpp.ps.gz">also
+         in PostScript</a>)</li>
+  </ul></li>
   <li>GCC 3.0.4 manuals:
   <ul>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.4/gcc.html">GCC
