Update the paragraph on installed languages, keep GCC 3.0 and add some links related to the GCC 3.1 release.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -117,10 +117,9 @@ as the official GNU maintainer for GCC.  At that time GCC was renamed
 from the "GNU C Compiler" to the "GNU Compiler Collection" and received
 a new <a href="gccmission.html">mission statement</a>.</p>
 
-<p>Currently GCC contains front ends for C, C++, Objective C, 
-Fortran, and <a href="java/">Java</a> as well as libraries for these
-languages (<a href="libstdc++/">libstdc++</a>, libgcj,...); GCC 3.1
-will also include an Ada front end.</p>
+<p>Currently GCC contains front ends for C, C++, Objective C, Fortran,
+<a href="java/">Java</a>, and Ada, as well as libraries for these
+languages (<a href="libstdc++/">libstdc++</a>, libgcj,...).</p>
 
 <p>We encourage everyone to <a href="contribute.html">contribute changes</a>
 and help testing GCC, and we provide access to our development sources with
@@ -136,18 +135,34 @@ GNU/Linux) and cross targets and use an extensive
 and automated testers</a> to maintain and improve quality.</p>
 
 
+<!-- NOTE: Of the following four items, we always want to show exactly
+     three -- either the first, second, and third, or the second, third,
+     and fourth.
+-->
+
 <dl>
-<dt><strong>Current release series:</strong>
-  <a href="gcc-3.1/">GCC 3.1</a>
+<dt><strong>Previous release series:</strong>
+  <a href="gcc-3.0/">GCC 3.0.4</a>
 </dt><dd>
   Open for all maintainers.
 </dd>
+
+<dt><strong>Current release series:</strong>
+  <a href="gcc-3.1/">GCC 3.1</a>
+</dt><dd>
+  Open for all maintainers
+  (<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01212.html">policy</a>)
+</dd>
+
+<!--
 <dt><strong>Active release branch:</strong>
-  GCC 3.1 (<a href="gcc-3.1/criteria.html">release criteria</a>,
-           <a href="gcc-3.1/changes.html">changes</a>)
+  GCC 3.2 (<a href="gcc-3.2/criteria.html">release criteria</a>,
+           <a href="gcc-3.2/changes.html">changes</a>)
 </dt><dd>
   Non-documentation commits require approval by release manager.
 </dd>
+-->
+
 <dt><strong>Active development (mainline):</strong>
   will become GCC 3.2
 </dt><dd>
@@ -170,7 +185,7 @@ and automated testers</a> to maintain and improve quality.</p>
 
 <dt><b>May 15, 2002</b></dt>
 <dd>
-GCC 3.1 has been released.
+<a href="gcc-3.1/">GCC 3.1</a> has been released.
 </dd>
 
 <dt><b>May 5, 2002</b></dt>
