--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -224,39 +224,40 @@ stages of development, branch points, and releases:</p>
   ... former releases ...
        |
        v
-       +-- GCC 3.0 branch created -------------+
-       |              (Feb 12 2001)             \
-       |                                         v
+       +-- GCC 3.0 branch created ---------+
+       |              (Feb 12 2001)         \
+       |                                     v
        v                                      GCC 3.0 release (Jun 18 2001)
-  New development plan announced                   \
-       |              (Jul 18 2001)                 v
+  New development plan announced               \
+       |              (Jul 18 2001)             v
        |                                      GCC 3.0.1 release (Aug 20 2001)
-       |                                              \
-       v                                               v
+       |                                          \
+       v                                           v
   GCC 3.1 Stage 1 (ended Oct 15 2001)         GCC 3.0.2 release (Oct 25 2001)
-       |                                                 \
-       v                                                  v
+       |                                             \
+       v                                              v
   GCC 3.1 Stage 2 (ended Dec 19 2001)         GCC 3.0.3 release (Dec 20 2001)
-       |                                                   :
-       v                                                   :
+       |                                               :
+       v                                               :
   GCC 3.1 Stage 3 (ends Feb 15 2002)
        |
-       +-- GCC 3.1 branch created -------------+
-       |                                        \
-       v                                         v
-  GCC 3.2 Stage 1 (ends Apr 15 2002)          GCC 3.1 release (May 15 2002)
-       |                                           \
-       v                                            v
-  GCC 3.2 Stage 2 (ends Jun 15 2002)          GCC 3.1.1 release (Jun 15 2002)
-       |                                              \
-       V                                               v
-  GCC 3.2 Stage 3 (ends Aug 15 2002)          GCC 3.1.2 release (Aug 15 2002)
-       |                                                :
-       |                                                :
-       +-- GCC 3.2 branch created -------------+
-       |                                        \
-       :                                         v
-       :                                      GCC 3.2 release (Oct 15 2002)
+       +-- GCC 3.1 branch created ---------+
+       |                                    \
+       |                                     v
+       v                                      GCC 3.1 release (May 15 2002)
+  GCC 3.2 Stage 1 (ends Jun 15 2002)           \
+       |                                        v
+       v                                      GCC 3.1.1 release (Jul 15 2002)
+  GCC 3.2 Stage 2 (ends Aug 15 2002)              \
+       |                                           v
+       v                                      GCC 3.1.2 release (Sep 15 2002)
+  GCC 3.2 Stage 3 (ends Oct 15 2002)                 \
+       |                                              v
+       v                                     [GCC 3.1.3 release (Nov 15 2002)]
+       +-- GCC 3.2 branch created ---------+
+       |                                    \
+       :                                     v
+       :                                      GCC 3.2 release (Dec 15 2002)
        :                                          :
 
 </pre>
