--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -1,4 +1,8 @@
-<html>
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!DOCTYPE html 
+          PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+          "DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
 <title>Build status for GCC 3.1</title>
@@ -21,7 +25,166 @@ including a list of information to include in such a report, are part of
 Installing GCC: Final Installation</a>.</p>
 
 <table>
-<tr><td>(this will get entries after GCC 3.1 is released)</td></tr>
+
+<tr>
+<td>alphaev6-dec-osf4.0f</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01278.html">3.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00585.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>armv5l-unknown-linux-gnu (xscale)</td>
+<td>glibc 2.2.5, kernel 2.4.16</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01269.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>hppa2.0w-hp-hpux11.00</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00586.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin 1.3.9, Windows XP</td>
+<td>Partially successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01274.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin 1.3.10, Windows 2000</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01248.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01267.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00563.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00543.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00549.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00575.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00579.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00580.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.7</td>
+<td>Successful (C, C++, Java, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01286.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2</td>
+<td>Successful (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01306.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01256.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Slackware 8.0, glibc 2.2.3, kernel 2.4.5</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01257.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE Linux 8.0, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful (C, C++, F77, Obj-C, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01227.html">3.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00552.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>ia64-suse-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00548.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>mipsel-pc-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00587.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Obj-C, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01227.html">3.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00578.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00568.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc64-sun-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Obj-C, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01227.html">3.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00572.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc64-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00577.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc64-unknown-linux-gnu</td>
+<td>SuSE Linux 7.3, glibc 2.2.4, kernel 2.4.14</td>
+<td>Successful (C, C++, F77, Obj-C, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01227.html">3.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00560.html">3.1</a>
+</td>
+</tr>
 
 </table>
 
