Add the following 3.1 entries:   hppa2.0w-hp-hpux11.00   i686-pc-linux-gnu (Red Hat 6.2, glibc 2.1.3, kernel 2.2.19)   i686-pc-mingw32 (Mingw 2.0/MSYS 1.0.7)
Fix entries for sparc64 that should have been sparc.

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -46,7 +46,9 @@ Installing GCC: Final Installation</a>.</p>
 <tr>
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>&nbsp;</td>
-<td>Test results:
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01326.html">3.1</a>
+<br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00586.html">3.1</a>
 </td>
 </tr>
@@ -83,6 +85,14 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00575.html">3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00579.html">3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00580.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 6.2, glibc 2.1.3, kernel 2.2.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01328.html">3.1</a>
 </td>
 </tr>
 
@@ -125,6 +135,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-mingw32</td>
+<td>Mingw 2.0/MSYS 1.0.7</td>
+<td>Successful (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01330.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>ia64-suse-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -159,6 +176,16 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc-unknown-linux-gnu</td>
+<td>SuSE Linux 7.3, glibc 2.2.4, kernel 2.4.14</td>
+<td>Successful (C, C++, F77, Obj-C, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01227.html">3.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00560.html">3.1</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc64-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77, Obj-C, Java):
@@ -173,16 +200,6 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00577.html">3.1</a>
-</td>
-</tr>
-
-<tr>
-<td>sparc64-unknown-linux-gnu</td>
-<td>SuSE Linux 7.3, glibc 2.2.4, kernel 2.4.14</td>
-<td>Successful (C, C++, F77, Obj-C, Java):
-<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01227.html">3.1</a>
-<br />Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00560.html">3.1</a>
 </td>
 </tr>
 
