--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -136,7 +136,7 @@ and automated testers</a> to maintain and improve quality.</p>
 
 
 <!-- NOTE: Of the following four items, we always want to show exactly
-     three -- either the first, second, and third, or the second, third,
+     three - either the first, second, and third, or the second, third,
      and fourth.
 -->
 
