--- a/htdocs/gcc-3.1/index.html
+++ b/htdocs/gcc-3.1/index.html
@@ -21,8 +21,9 @@ GNU Compiler Collection.</p>
 as new information becomes available.</p>
 
 <p>The GCC developers would like to thank the numerous people that
-have contributed new features, test results, bugfixes, etc to GCC.  This
-<a href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">amazing
+have contributed <a href="changes.html">new features, improvements,
+bug fixes, and other changes</a> as well as test results to GCC.
+This <a href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">amazing
 group of volunteers</a> is what makes GCC successful.</p>
 
 <p>For additional information about GCC please refer to the
