--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -22,8 +22,8 @@
          3.1 Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcc-3.1/gcc.ps.gz">also
          in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1/g77/">G77
-         0.5.26 (GCC 3.1) Manual</a> (<a
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1/g77/">GCC
+         3.1 G77 Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcc-3.1/g77.ps.gz">also
          in PostScript</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1/gcj/">GCC
@@ -35,6 +35,7 @@
          href="http://gcc.gnu.org/onlinedocs/gcc-3.1/cpp.ps.gz">also
          in PostScript</a>)</li>
   </ul></li>
+
   <li>GCC 3.0.4 manuals:
   <ul>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.4/gcc.html">GCC
@@ -54,81 +55,6 @@
          in PostScript</a>)</li>
   </ul></li>
 
-  <li>GCC 3.0.3 manuals:
-  <ul>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.3/gcc.html">GCC
-         3.0.3 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.3/gcc.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.3/g77.html">G77
-         0.5.26 (GCC 3.0.3) Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.3/g77.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.3/gcj.html">GCC
-         3.0.3 GCJ Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.3/gcj.ps.gz">also
-         in PostScript</a>)</li>
-    <li>GCC 3.0.3 CPP Manual (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.3/cpp.ps.gz">only
-         in PostScript</a>)</li>
-  </ul></li>
-  <li>GCC 3.0.2 manuals:
-  <ul>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/gcc.html">GCC
-         3.0.2 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/gcc.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/g77.html">G77
-         0.5.26 (GCC 3.0.2) Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/g77.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/gcj.html">GCC
-         3.0.2 GCJ Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/gcj.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/cpp.html">GCC
-         3.0.2 CPP Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/cpp.ps.gz">also
-         in PostScript</a>)</li>
-  </ul></li>
-  <li>GCC 3.0.1 manuals:
-  <ul>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcc.html">GCC
-         3.0.1 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcc.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/g77.html">G77
-         0.5.26 (GCC 3.0.1) Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/g77.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcj.html">GCC
-         3.0.1 GCJ Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcj.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/cpp.html">GCC
-         3.0.1 CPP Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/cpp.ps.gz">also
-         in PostScript</a>)</li>
-  </ul></li>
-  <li>GCC 3.0 manuals:
-  <ul>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0/gcc.html">GCC
-         3.0 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0/gcc.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0/g77.html">G77
-         0.5.26 (GCC 3.0) Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0/g77.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0/gcj.html">GCC
-         3.0 GCJ Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0/gcj.ps.gz">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0/cpp.html">GCC
-         3.0 CPP Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0/cpp.ps.gz">also
-         in PostScript</a>)</li>
-  </ul></li>
   <li>GCC 2.95.3 manuals:
   <ul>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/gcc.html">GCC
