--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -31,7 +31,7 @@
          href="http://gcc.gnu.org/onlinedocs/gcc-3.1/gcj.ps.gz">also
          in PostScript</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.1/cpp/">GCC 
-         3.1 CPP Manual (<a
+         3.1 CPP Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcc-3.1/cpp.ps.gz">also
          in PostScript</a>)</li>
   </ul></li>
